--- a/Ecom/styles.css
+++ b/Ecom/styles.css
@@ -5,7 +5,12 @@
     --primary-color: #7342d6;
 }
 
-html {
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
     scroll-behavior: smooth;
 }
 
@@ -18,7 +23,6 @@ html {
 
 body {
     max-width: 100vw;
-    overflow-x: hidden;  
 }
 
 nav {
@@ -340,6 +344,7 @@ h2 {
 footer {
     background-color: #242424;
     color: #fff;
+    width: 100%;
 }
 
 
@@ -348,13 +353,13 @@ footer {
     max-width: 400px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 
 }
 
 .footer__link {
     font-size: 20px;
-    margin: 32px 0;
+    margin: 32px 16px;
 }
 
 .footer__link:hover {
